--- a/templates/admin/default/index.html.twig
+++ b/templates/admin/default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block page_title %}ArtBill{% endblock %}
 
 {% block page_content %}
-    Page d'accueil admin
+    Bienvenue sur ArtBill
 {% endblock %}
