--- a/templates/admin/service/index.html.twig
+++ b/templates/admin/service/index.html.twig
@@ -1,41 +1,69 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/list.html.twig' %}
 
-{% block title %}Service index{% endblock %}
+{% block page_title %}Prestations{% endblock %}
 
-{% block page_content %}
-    <h1>Service index</h1>
+{% block page_header %}
+    <p class="text-2xl font-bold">Prestations</p>
+    <div class="flex gap-3">
+        <input class="w-96 border rounded-md text-sm outline-primary px-2 py-1" type="text" name="search" value="" placeholder="Rechercher..." />
+        <a href="{{ path('admin_service_new') }}" title="Ajouter">
+            <div class="btn flex justify-center items-center rounded-md bg-primary h-full px-4">
+                <icon name="plus" display="mini" color="white"></icon>
+            </div>
+        </a>
+    </div>
+{% endblock %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Label</th>
-                <th>Description</th>
-                <th>Price</th>
-                <th>Created</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for service in services %}
-            <tr>
-                <td>{{ service.id }}</td>
-                <td>{{ service.label }}</td>
-                <td>{{ service.description }}</td>
-                <td>{{ service.price }}</td>
-                <td>{{ service.created ? service.created|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('admin_service_show', {'id': service.id}) }}">show</a>
-                    <a href="{{ path('admin_service_edit', {'id': service.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+{% block thead %}
+    {% if services is not empty %}
+        <th></th>
+        <th>Libellé</th>
+        <th>Description</th>
+        <th>Prix</th>
+        <th>Création</th>
+        <th></th>
+    {% else %}
+        <th class="text-center">Aucune donnée</th>
+    {% endif %}
+{% endblock %}
 
-    <a href="{{ path('admin_service_new') }}">Create new</a>
+{% block tbody %}
+    {% for service in services %}
+        <tr>
+            <td class="w-10 h-12">
+                <a href="{{ path('admin_service_show', {'id': service.id}) }}" title="Voir">
+                    <icon name="eye" display="solid" color="primary" size="4"></icon>
+                </a>
+            </td>
+            <td><a class="font-bold text-primary" href="{{ path('admin_service_show', {'id': service.id}) }}">{{ service.label }}</a></td>
+            <td>{{ service.description }}</td>
+            <td>{{ service.price }}<span class="text-xs"> €</span></td>
+            <td>
+                {% if today == service.createdAt|date('Y-m-d') %}
+                    Aujourd'hui
+                {% elseif today|date_modify('-1 day')|date('Y-m-d') == service.createdAt|date('Y-m-d') %}
+                    Hier
+                {% else %}
+                    {{ service.createdAt|date('d/m/Y') }}
+                {% endif %}
+
+                à {{ service.createdAt|date('H') }}h{{ service.createdAt|date('i') }}
+            </td>
+            <td>
+                <div class="flex justify-end gap-3">
+                    <a href="{{ path('admin_service_edit', {'id': service.id}) }}">
+                        <div class="h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md px-2.5 p-1 bg-primary text-white">
+                            <icon name="pencil" display="solid" color="white" size="4"></icon>
+                            <span>Modifier</span>
+                        </div>
+                    </a>
+                    <a href="{{ path('admin_service_delete', {'id': service.id}) }}">
+                        <div class="w-8 h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md py-1">
+                            <icon name="trash" display="solid" color="primary" size="4"></icon>
+                        </div>
+                    </a>
+                </div>
+            </td>
+        </tr>
+    {% endfor %}
 {% endblock %}
