--- a/templates/admin/category/show.html.twig
+++ b/templates/admin/category/show.html.twig
@@ -1,30 +1,43 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/sheet.html.twig' %}
 
-{% block title %}Category{% endblock %}
+{% block page_title %}Fiche catégorie de prestation - ArtBill{% endblock %}
 
-{% block page_content %}
-    <h1>Category</h1>
+{% block page_header %}
+    <p class="text-2xl font-bold">Fiche catégorie de prestation</p>
+    <div class="flex justify-end gap-3 text-sm">
+        <a href="{{ path('admin_category_edit', {'id': category.id}) }}">
+            <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
+                <icon name="pencil" display="solid" color="white" size="4"></icon>
+                <span>Modifier</span>
+            </div>
+        </a>
+        <a href="{{ path('admin_category_delete', {'id': category.id}) }}">
+            <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-red-500 text-white">
+                <icon name="trash" display="solid" color="white" size="4"></icon>
+                <span>Supprimer</span>
+            </div>
+        </a>
+    </div>
+{% endblock %}
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Label</th>
-                <td>{{ category.label }}</td>
-            </tr>
-            <tr>
-                <th>Created</th>
-                <td>{{ category.created ? category.created|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+{% block sheet %}
+    <p class="text-lg font-bold mb-1">Informations</p>
 
-    <a href="{{ path('admin_category_index') }}">back to list</a>
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Libellé
+        </div>
+        <div class="flex-1">
+            {{ category.label }}
+        </div>
+    </div>
 
-    <a href="{{ path('admin_category_edit', {'id': category.id}) }}">edit</a>
-
-    {{ include('admin/category/_delete_form.html.twig') }}
+    <div class="w-full flex">
+        <div class="w-1/4 text-xs text-gray-500">
+            Date et heure de création
+        </div>
+        <div class="flex-1">
+            {{ category.createdAt|date('d/m/Y à H') }}h{{ category.createdAt|date('i') }}
+        </div>
+    </div>
 {% endblock %}
