--- a/templates/admin/customer/new.html.twig
+++ b/templates/admin/customer/new.html.twig
@@ -1,39 +1,31 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/form.html.twig' %}
 
-{% block title %}Création d'un client{% endblock %}
-
-{% block page_content %}
-    <div class="container mx-auto my-8">
-        <h1 class="text-4xl font-bold mb-6">Création d'un client</h1>
-
-        {{ form_start(form, {'attr': {'class': 'max-w-md'}}) }}
-            <div class="mb-4">
-                {{ form_row(form.name, {'attr': {'class': 'w-full px-3 py-2 border rounded'}}) }}
-            </div>
-
-            <div class="mb-4">
-                {{ form_row(form.email, {'attr': {'class': 'w-full px-3 py-2 border rounded'}}) }}
-            </div>
-
-            <div class="mb-4">
-                {{ form_row(form.street, {'attr': {'class': 'w-full px-3 py-2 border rounded'}}) }}
-            </div>
-
-            <div class="mb-4">
-                {{ form_row(form.city, {'attr': {'class': 'w-full px-3 py-2 border rounded'}}) }}
-            </div>
-
-            <div class="mb-4">
-                {{ form_row(form.zip_code, {'attr': {'class': 'w-full px-3 py-2 border rounded'}}) }}
-            </div>
-
-            <div class="mb-4">
-                {{ form_row(form.country, {'attr': {'class': 'w-full px-3 py-2 border rounded'}}) }}
-            </div>
-
-            <div class="mb-6">
-                <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700">Créer</button>
-            </div>
-        {{ form_end(form) }}
+{% block page_title %}Ajouter un client - ArtBill{% endblock %}
+{% block page_header %}
+    <p class="text-2xl font-bold">Ajouter un client</p>
+    <div class="flex justify-end gap-3 text-sm">
+        <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
+            <icon name="check" display="solid" color="white" size="4"></icon>
+            <input type="submit" value="Enregistrer">
+        </div>
     </div>
+{% endblock %}
+
+{% block form %}
+    {% set fields = {
+        'name': 'Nom',
+        'email': 'E-mail',
+        'street': 'Rue',
+        'city': 'Ville',
+        'zip_code': 'Code postal',
+        'country': 'Pays',
+    } %}
+
+    {% for field, label in fields %}
+        <div class="w-72 flex flex-col">
+            {{ form_label(form[field], label) }}
+            {{ form_widget(form[field]) }}
+            {{ form_errors(form[field]) }}
+        </div>
+    {% endfor %}
 {% endblock %}
