--- a/templates/admin/quotation/index.html.twig
+++ b/templates/admin/quotation/index.html.twig
@@ -1,11 +1,75 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/list.html.twig' %}
 
-{% block title %}Quotation index
+{% block page_title %}Devis{% endblock %}
+
+{% block page_header %}
+    <p class="text-2xl font-bold">Devis</p>
+    <div class="flex gap-3">
+        <input class="w-96 border rounded-md text-sm outline-primary px-2 py-1" type="text" name="search" value="" placeholder="Rechercher..." />
+        <a href="{{ path('admin_quotation_new') }}" title="Ajouter">
+            <div class="btn flex justify-center items-center rounded-md bg-primary h-full px-4">
+                <icon name="plus" display="mini" color="white"></icon>
+            </div>
+        </a>
+    </div>
 {% endblock %}
 
-{% block page_content %}
-	<h1>Quotation index</h1>
-	{# a changer suivant le role de l'utilisateur #}
-	<a href="{{ path('admin_quotation_new') }}">Create new</a>
-	{% include '_partials/_quotation.index.html.twig' with {'quotations': quotations}%}
+{% block thead %}
+    {% if quotations is not empty %}
+        <th></th>
+        <th>Description</th>
+        <th>Montant HT</th>
+        <th>Montant TTC</th>
+        <th>Date du devis</th>
+        <th>Date d'échéance</th>
+        <th>Statut</th>
+        <th>Création</th>
+        <th></th>
+    {% else %}
+        <th class="text-center">Aucune donnée</th>
+    {% endif %}
+{% endblock %}
+
+{% block tbody %}
+    {% for quotation in quotations %}
+        <tr>
+            <td class="w-10 h-12">
+                <a href="{{ path('admin_quotation_show', {'id': quotation.id}) }}" title="Voir">
+                    <icon name="eye" display="solid" color="primary" size="4"></icon>
+                </a>
+            </td>
+            <td>{{ quotation.description }}</td>
+            <td>{{ quotation.amountHt }}<span class="text-xs"> €</span></td>
+            <td>{{ quotation.amountTtc }}<span class="text-xs"> €</span></td>
+			<td class="px-3 py-2 whitespace-no-wrap">{{ quotation.date ? quotation.date|date('Y-m-d') : '' }}</td>
+			<td class="px-3 py-2 whitespace-no-wrap">{{ quotation.dueDate ? quotation.dueDate|date('Y-m-d') : '' }}</td>
+            <td>{{ quotation.status }}</td>
+            <td>
+                {% if today == quotation.createdAt|date('Y-m-d') %}
+                    Aujourd'hui
+                {% elseif today|date_modify('-1 day')|date('Y-m-d') == quotation.createdAt|date('Y-m-d') %}
+                    Hier
+                {% else %}
+                    {{ quotation.createdAt|date('d/m/Y') }}
+                {% endif %}
+
+                à {{ quotation.createdAt|date('H') }}h{{ quotation.createdAt|date('i') }}
+            </td>
+            <td>
+                <div class="flex justify-end gap-3">
+                    <a href="{{ path('admin_quotation_edit', {'id': quotation.id}) }}">
+                        <div class="h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md px-2.5 p-1 bg-primary text-white">
+                            <icon name="pencil" display="solid" color="white" size="4"></icon>
+                            <span>Modifier</span>
+                        </div>
+                    </a>
+                    <a href="{{ path('admin_quotation_delete', {'id': quotation.id}) }}">
+                        <div class="w-8 h-8 flex justify-center items-center gap-1.5 border shadow-sm rounded-md py-1">
+                            <icon name="trash" display="solid" color="primary" size="4"></icon>
+                        </div>
+                    </a>
+                </div>
+            </td>
+        </tr>
+    {% endfor %}
 {% endblock %}
