--- a/templates/admin/service/edit.html.twig
+++ b/templates/admin/service/edit.html.twig
@@ -1,13 +1,30 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/default/form.html.twig' %}
 
-{% block title %}Edit Service{% endblock %}
+{% block page_title %}Modifier une prestation - ArtBill{% endblock %}
+{% block page_header %}
+    <p class="text-2xl font-bold">Modifier une prestation</p>
+    <div class="flex justify-end gap-3 text-sm">
+        <div class="h-9 flex justify-center items-center gap-1.5 border shadow-sm rounded-md p-3 bg-primary text-white">
+            <icon name="check" display="solid" color="white" size="4"></icon>
+            <input type="submit" value="Enregistrer">
+        </div>
+    </div>
+{% endblock %}
 
-{% block page_content %}
-    <h1>Edit Service</h1>
+{% block form %}
+    {% set fields = {
+        'label': 'Libellé',
+        'description': 'Description',
+        'price': 'Prix',
+        'vat_rate': 'Taux de TVA',
+        'category': 'Catégorie',
+    } %}
 
-    {{ include('admin/service/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('admin_service_index') }}">back to list</a>
-
-    {{ include('admin/service/_delete_form.html.twig') }}
+    {% for field, label in fields %}
+        <div class="w-72 flex flex-col">
+            {{ form_label(form[field], label) }}
+            {{ form_widget(form[field]) }}
+            {{ form_errors(form[field]) }}
+        </div>
+    {% endfor %}
 {% endblock %}
