--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,10 +21,12 @@
     {% endblock %}
 
     <header class="fixed top-0 left-0 right-0 z-50 h-11 flex justify-between items-center bg-gray-100 border-b-[1px] px-5 py-2">
-        <img class="w-auto h-full" src="./../../assets/images/logo.png" alt="ArtBill" />
+        <img class="w-auto h-full" src="./../../assets/images/logo.png" alt="ArtBill"/>
 
         <div class="w-6 h-6 rounded-full overflow-hidden">
-            <img src="./../../assets/images/avatar-placeholder.png" alt="Avatar" class="w-full h-full object-cover">
+            <a href="/logout">
+                <img src="./../../assets/images/avatar-placeholder.png" alt="Avatar" class="w-full h-full object-cover">
+            </a>
         </div>
     </header>
 
