--- a/templates/user/pdf/pdf_template.html.twig
+++ b/templates/user/pdf/pdf_template.html.twig
@@ -88,19 +88,21 @@
                 <tr>
                     <td>{{ service.label }}</td>
                     <td>{{ service.quantity }}</td>
-                    <td>{{ service.price|number_format(2, ',', ' ') }}</td>
-                    <td>{{ (service.price * service.quantity)|number_format(2, ',', ' ') }}</td>
+                    <td>{{ service.price|number_format(service.price is divisible by(1)? 0 : 2, ',', ' ') }}</td>
+                    <td>{{ (service.price * service.quantity)|number_format((service.price * service.quantity) is divisible by(1)? 0 : 2, ',', ' ') }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
         <div class="details">
-            <p><strong>TVA 10%:</strong> {{ forPdf.vatRate10|number_format(2, ',', ' ') }}</p>
-            <p><strong>TVA 20%:</strong> {{ forPdf.vatRate20|number_format(2, ',', ' ') }}</p>
+            <p><strong>TVA 10%:</strong> {{ forPdf.vatRate10|number_format(forPdf.vatRate10 is divisible by(1)? 0 : 2, ',', ' ') }}</p>
+            <p><strong>TVA 20%:</strong> {{ forPdf.vatRate20|number_format(forPdf.vatRate20 is divisible by(1)? 0 : 2, ',', ' ') }}</p>
+            <p><strong>Sans TVA:</strong> {{ forPdf.vatRate20|number_format(forPdf.baseVatRate0 is divisible by(1)? 0 : 2, ',', ' ') }}</p>
+
         </div>
         <div class="total">
-            <p><strong>Total HT:</strong> {{ forPdf.amountHt|number_format(2, ',', ' ') }}</p>
-            <p><strong>Total TTC:</strong> {{ forPdf.amountTtc|number_format(2, ',', ' ') }}</p>
+            <p><strong>Total HT:</strong> {{ forPdf.amountHt|number_format(forPdf.amountHt is divisible by(1)? 0 : 2, ',', ' ') }}</p>
+            <p><strong>Total TTC:</strong> {{ forPdf.amountTtc|number_format(forPdf.amountTtc is divisible by(1)? 0 : 2, ',', ' ') }}</p>
         </div>
     </div>
 </body>
