meilleurs titres des factures et devis

--- a/templates/admin/quotation/index.html.twig
+++ b/templates/admin/quotation/index.html.twig
@@ -1,11 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Quotation index
-{% endblock %}
+{% block title %}Devis{% endblock %}
 
 {% block page_content %}
-	<h1>Quotation index</h1>
-	{# a changer suivant le role de l'utilisateur #}
-	<a href="{{ path('admin_quotation_new') }}">Create new</a>
-	{% include '_partials/_quotation.index.html.twig' with {'quotations': quotations}%}
+    <h1 class="text-3xl font-bold mb-8">Gestion des Devis</h1>
+    <a href="{{ path('admin_quotation_new') }}" class="text-blue-500 hover:text-blue-700">Créer un nouveau devis</a>
+    {% include '_partials/_quotation.index.html.twig' with {'quotations': quotations} %}
 {% endblock %}
