--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
         <div id="sidebar" class="w-60 h-full bg-gray-100 text-gray-700 text-sm border-r-[1px]">
             <div class="h-full flex flex-col sticky top-11 divide-y divide-gray-200 overflow-y-auto">
                 <ul class="flex flex-col p-3">
-                    <a href="#">
+                    <a href="/dashboard">
                         <li class="w-full rounded-md hover:bg-gray-200 transition-fast px-2 py-1.5">
                             <div class="flex items-center gap-2">
                                 <icon name="squares-2x2"></icon>
