--- a/templates/user/invoice/index.html.twig
+++ b/templates/user/invoice/index.html.twig
@@ -44,7 +44,7 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('user_invoice_index') }}">Create new</a>
+	<a href="{{ path('user_invoice_new') }}">Create new</a>
 
 
 {% endblock %}
