routing change for pdf

--- a/templates/admin/invoice/show.html.twig
+++ b/templates/admin/invoice/show.html.twig
@@ -10,11 +10,11 @@
           
 <a href="{{ path('admin_invoice_index') }}" class="btn btn-secondary">Retour à la liste</a>
 <a href="{{ path('admin_invoice_edit', {'id': invoice.id}) }}" class="btn btn-primary">Modifier</a>
-<a href="{{ path('admin_generate_pdf', {'id': invoice.id, 'type': 'invoice'}) }}" target="_blank">Générer PDF</a>
+<a href="{{ path('generate_pdf', {'id': invoice.id, 'type': 'invoice'}) }}" target="_blank">Générer PDF</a>
 
-<button id="togglePreview">Afficher la prévisualisation</button>
+<button id="togglePreview" >Afficher la prévisualisation</button>
 
-<div id="previewContainer">
+<div id="previewContainer" style='display: none;'>
     <iframe id="previewIframe" width="600" height="900;"></iframe>
 </div>
 
@@ -28,7 +28,7 @@
             previewContainer.style.display = 'block';
             
             const invoiceId = "{{ invoice.id|raw }}";
-            document.getElementById('previewIframe').src = "{{ path('admin_preview_pdf') }}?id=" + invoiceId + "&type=invoice";
+            document.getElementById('previewIframe').src = "{{ path('preview_pdf') }}?id=" + invoiceId + "&type=invoice";
         } else {
             previewContainer.style.display = 'none';
             toggleButton.textContent = 'Afficher la prévisualisation';
