--- a/templates/_partials/_pdf_template.html.twig
+++ b/templates/_partials/_pdf_template.html.twig
@@ -23,6 +23,10 @@
             border-bottom: 1px solid #cbd5e0;
             padding-bottom: 10px;
             margin-bottom: 20px;
+            min-height : 45px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         .header h1 {
             margin: 0;
@@ -30,24 +34,45 @@
             font-size: 24px;
             text-transform: uppercase;
         }
-        .details {
-            margin-bottom: 20px;
+        .sender-receiver {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .client, .company{
+            width: 50%;
+        }
+        .company {
+            text-align: right;
         }
         table {
             width: 100%;
             border-collapse: collapse;
         }
+   
         th, td {
             border: 1px solid #cbd5e0;
             padding: 10px;
             text-align: left;
+            min-width: 60px;
         }
         th {
             background-color: #edf2f7;
             font-weight: bold;
         }
+        .tva {
+            margin-top: 20px;
+            width: 40%;
+            height: 100px;
+        }
+        .end_table {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+        }
         .total {
             text-align: right;
+            width: 40%;
         }
         .total p {
             margin: 5px 0;
@@ -59,18 +84,21 @@
     <div class="container">
         <div class="header">
             <h1>{{ type|upper }}</h1>
-        </div>
-        <div class="details">
-            <p><strong>Customer:</strong></p>
+        <img src="{{ asset('assets/images/logo.png') }}" alt="Logo ArtBill" width="auto" height="45px">
+</div>
+    <div class='sender-receiver'>
+        <div class="client">
+            <p><strong>Client:</strong></p>
             <p>{{ forPdf.customer.name }}</p>
             <p>{{ forPdf.customer.street }}, {{ forPdf.customer.city }}, {{ forPdf.customer.getZipCode() }}, {{ forPdf.customer.country }}</p>
         </div>
-        <div class="details">
+        <div class="company">
             <p><strong>Company:</strong></p>
             <p>{{ forPdf.company.name }}</p>
             <p>{{ forPdf.company.street }}, {{ forPdf.company.city }}, {{ forPdf.company.getZipCode() }}, {{ forPdf.company.country }}</p>
         </div>
-        <div class="details">
+    </div>
+        <div class="due_date">
             <p><strong>Due Date:</strong></p>
             <p>{{ forPdf.dueDate ? forPdf.dueDate|date('Y-m-d') : '' }}</p>
         </div>
@@ -96,17 +124,46 @@
                 {% endfor %}
             </tbody>
         </table>
-        <div class="details">
-            <p><strong> Base TVA 10%:</strong> {{ forPdf.baseVatRate10|number_format(forPdf.vatRate10 is divisible by(1)? 0 : 2, ',', ' ') }}</p>
-            <p><strong>TVA 10%:</strong> {{ forPdf.vatRate10|number_format(forPdf.vatRate10 is divisible by(1)? 0 : 2, ',', ' ') }}</p>
-            <p><strong>Base TVA 20%:</strong> {{ forPdf.baseVatRate20|number_format(forPdf.vatRate10 is divisible by(1)? 0 : 2, ',', ' ') }}</p>
-            <p><strong>TVA 20%:</strong> {{ forPdf.vatRate20|number_format(forPdf.vatRate20 is divisible by(1)? 0 : 2, ',', ' ') }}</p>
-            <p><strong>Sans TVA:</strong> {{ forPdf.baseVatRate0|number_format(forPdf.baseVatRate0 is divisible by(1)? 0 : 2, ',', ' ') }}</p>
-        </div>
-        <div class="total">
-            <p><strong>Total HT:</strong> {{ forPdf.amountHt|number_format(forPdf.amountHt is divisible by(1)? 0 : 2, ',', ' ') }} €</p>
-            <p><strong>Total TTC:</strong> {{ forPdf.amountTtc|number_format(forPdf.amountTtc is divisible by(1)? 0 : 2, ',', ' ') }} €</p>
-        </div>
+
+        <div class="end_table">
+        <table class="tva">
+        <thead>
+        <th>Taux TVA</th>
+        <th>Base TVA</th>
+        <th>TVA</th>
+        </thead>
+        <tbody>
+        <tr>
+        <td>10%</td>
+        <td>{{ forPdf.baseVatRate10|number_format(forPdf.vatRate10 is divisible by(1)? 0 : 2, ',', ' ') }}</td>
+        <td>{{ forPdf.vatRate10|number_format(forPdf.vatRate10 is divisible by(1)? 0 : 2, ',', ' ') }}</td>
+        </tr>
+        <tr>
+        <td>20%</td>
+        <td>{{ forPdf.baseVatRate20|number_format(forPdf.vatRate10 is divisible by(1)? 0 : 2, ',', ' ') }}</td>
+        <td>{{ forPdf.vatRate20|number_format(forPdf.vatRate20 is divisible by(1)? 0 : 2, ',', ' ') }}</td>
+        </tr>
+        <tr>
+        <td>Sans TVA</td>
+        <td>{{ forPdf.baseVatRate0|number_format(forPdf.baseVatRate0 is divisible by(1)? 0 : 2, ',', ' ') }}</td>
+        <td>0</td>
+        </tr>
+        </tbody>
+        </table>
+        
+        <table class="total">
+            <tr>
+                <th>Total HT</th>
+                <td>{{ forPdf.amountHt|number_format(forPdf.amountHt is divisible by(1)? 0 : 2, ',', ' ') }} €</td>
+            </tr>
+            <tr>
+                <th>Total TTC</th>
+                <td>{{ forPdf.amountTtc|number_format(forPdf.amountTtc is divisible by(1)? 0 : 2, ',', ' ') }} €</td>
+            </tr>
+        </table>
+</div>
+
+
     </div>
 </body>
 </html>
