--- a/templates/superadmin/invoice/_delete_form.html.twig
+++ b/templates/superadmin/invoice/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('superadmin_invoice_delete', {'id': invoice.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('superadmin_invoice_delete', {'id': invoice.id}) }}" onsubmit="return confirm('Voulez vous vraiment archiver cette facture ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ invoice.id) }}">
-	<button class="btn">Delete</button>
+	<button class="btn">Archiver</button>
 </form>
