--- a/templates/superadmin/quotation/_delete_form.html.twig
+++ b/templates/superadmin/quotation/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('superadmin_quotation_delete', {'id': quotation.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('superadmin_quotation_delete', {'id': quotation.id}) }}" onsubmit="return confirm('Voulez vous vraiment archiver ce devis ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ quotation.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Archiver</button>
 </form>
